--- a/style.css
+++ b/style.css
@@ -23,8 +23,6 @@ body {
 .header .menu ul {
   list-style: none;
   display: flex;
-  margin: 0;
-  padding: 0;
 }
 
 .header .menu ul li {
@@ -42,21 +40,22 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  padding: 1rem;
+  padding: 0,5rem;
 }
 
 .form {
+  font-size: small;
   background-color: #fff;
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 60%;
+  width: 60
 }
 
 .form .title {
-  font-size: 1.5rem;
+  font-size: 16pt;
   font-weight: bold;
-  margin-bottom: 1rem;
+  margin-bottom: 0,5%;
   text-align: center;
 }
 
@@ -69,34 +68,38 @@ body {
 }
 
 .form h3 {
-  margin-bottom: 1rem;
+  margin-bottom: 0,5px;
 }
 
 .input-group {
   margin-bottom: 1rem;
+  margin: 1px;
+  margin-inline-start: 0%;
 }
 
 .input-group label {
   display: block;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.1rem;
 }
 
 .input-group input,
 .input-group select,
 .input-group textarea {
-  width: 100%;
+  width: 90%;
   padding: 0.5rem;
   border: 1px solid #ddd;
   border-radius: 4px;
+  margin: 10px;
+  margin-inline-start: 0%;
 }
 
 .input-group.full-width {
-  width: 100%;
+  width: 87%;
 }
 
 .flex {
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .buttons {
